// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentSimpleTableResultsMobile component renders correctly 1`] = `
<div>
  <div
    class="DocumentSimpleTableResultsMobile DocumentSimpleTableResults"
  >
    <div
      class="list-item"
    >
      <div
        class="list-title-row"
      >
        <div
          class="list-icon"
        >
          <svg
            class="download-icon"
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h32v32H0z"
              fill="none"
            />
            <path
              d="M21 2H8v28h21V10Z"
              fill="#aeb1b1"
            />
            <path
              d="M9 29V3h12v7h7v19Z"
              fill="#fff"
            />
            <rect
              fill="#d43533"
              height="10"
              rx="1"
              width="21"
              x="3"
              y="15"
            />
            <g
              fill="#fff"
            >
              <path
                d="M6 23v-6h1.944c.737 0 2.556.132 2.556 2 0 1.9-1.95 2-2.5 2H7v2Zm1-5v2h.874c.672 0 1.474-.121 1.474-1 0-.814-.7-1-1.551-1ZM11 17h2.214A2.838 2.838 0 0 1 16 19.885V20a2.8 2.8 0 0 1-2.592 2.994.914.914 0 0 0-.128.006H11Zm1 1v4h1.116a1.757 1.757 0 0 0 1.9-1.602v-.004A1.729 1.729 0 0 0 15 20c0-1.628-1.222-2-2.244-2ZM17 23v-6h4v1h-3v1.5h2.5v1H18V23Z"
              />
            </g>
          </svg>
        </div>
        <p
          class="MuiTypography-root document-title Typography-module_Typography__aA2Zb MuiTypography-body1"
        >
          contentful-document-title
        </p>
      </div>
      <div
        class="list-download-row"
      >
        <p
          class="MuiTypography-root document-type Typography-module_Typography__aA2Zb MuiTypography-body1"
        >
          asset-name
        </p>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-text buttonStyles-text-2 MuiButton-textPrimary"
          data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://doesnot-exist.com/fileName\\"}"
          href="http://doesnot-exist.com/fileName"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          <span
            class="MuiButton-label buttonStyles-label-4"
          >
            87.79 KB
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`DocumentSimpleTableResultsMobile component renders correctly when invalid asset types are used 1`] = `
<div>
  <div
    class="DocumentSimpleTableResultsMobile DocumentSimpleTableResults"
  >
    <div
      class="list-item"
    >
      <div
        class="list-title-row"
      >
        <div
          class="list-icon"
        >
          <svg
            class="download-icon"
          />
        </div>
        <p
          class="MuiTypography-root document-title Typography MuiTypography-body1"
        >
          contentful-document-title
        </p>
      </div>
      <div
        class="list-download-row"
      >
        <p
          class="MuiTypography-root document-type Typography MuiTypography-body1"
        >
          asset-name
        </p>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-41 MuiButton-text buttonStyles-text-42 MuiButton-textPrimary"
          data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://doesnot-exist.com/fileName\\"}"
          href="http://doesnot-exist.com/fileName"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          <span
            class="MuiButton-label buttonStyles-label-44"
          >
            87.79 KB
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`DocumentSimpleTableResultsMobile component renders correctly when valid asset types are used 1`] = `
<div>
  <div
    class="DocumentSimpleTableResultsMobile DocumentSimpleTableResults"
  >
    <div
      class="list-item"
    >
      <div
        class="list-title-row"
      >
        <div
          class="list-icon"
        >
          <svg
            class="download-icon"
          />
        </div>
        <p
          class="MuiTypography-root document-title Typography MuiTypography-body1"
        >
          contentful-document-title
        </p>
      </div>
      <div
        class="list-download-row"
      >
        <p
          class="MuiTypography-root document-type Typography MuiTypography-body1"
        >
          asset-name
        </p>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-21 MuiButton-text buttonStyles-text-22 MuiButton-textPrimary"
          data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://doesnot-exist.com/fileName\\"}"
          href="http://doesnot-exist.com/fileName"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          <span
            class="MuiButton-label buttonStyles-label-24"
          >
            87.79 KB
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
